# kie-api

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: AGENT_SKILLS.md  ARTIFACT_INDEXING.md  ARTIFACT_QUERYING.md  CODEX_PLUGIN.md  CONFIGURATION.md  CONTROL_API_INTEGRATION.md  DERIVATIVES.md  END_TO_END_FLOW.md  GETTING_STARTED.md  INTEGRATION_PLAYBOOK.md  LIBRARY_USAGE.md  LIVE_VERIFICATION_REPORT.md  LLM_START_HERE.md  MATURITY_MAP.md  MODEL_ONBOARDING.md  PRICING_AND_PREFLIGHT.md  PROMPT_PROFILES.md  PROMPT_WRAPPER_FLOW.md  REAL_API_INTEGRATION_READINESS.md  RUN_ARTIFACTS.md  SKILLS.md  UPLOAD_POLICY.md
examples/: append_run_index.py  build_submission_payload.py  check_credit_balance.py  create_artifact_with_custom_settings.py  create_image_run_artifact.py  create_video_run_artifact.py  dry_run_cost_estimate.py  dry_run_kling_frame_guidance.py  dry_run_preflight_gate.py  dry_run_with_prompt_enhancement.py  generate_derivatives_for_originals.py  live_run_guarded.py  normalize_and_validate.py  print_run_summary.py  query_artifact_runs.py  rebuild_artifact_index.py  run_request_fixtures.py  wrapper_prompt_flow.py
scripts/: install_codex_skills.py  refresh_site_pricing_snapshot.py  sync_packaged_specs.py
skills/: kie-kling-motion.md  kie-kling-video.md  kie-nano-banana.md
tests/: test_agent_skills.py  test_artifact_images.py  test_artifact_index.py  test_artifact_paths.py  test_artifact_querying.py  test_artifact_videos.py  test_artifact_writer.py  test_callbacks.py  test_codex_plugin.py  test_config.py  test_credits_client.py  (+14 more)
(+99 files in other folders)
